--- a/index.html
+++ b/index.html
@@ -1,9 +1,96 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Cerberus Website</title>
-</head>
-<body>
-<h1>Welcome to Cerberus Constructions</h1>
-</body>
-</html>
+
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cerberus Constructions Ltd</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <!-- Navigation Bar -->
+        <nav class="navbar">
+            <div class="container">
+                <a href="#home" class="nav-logo"><img src="logo.png" alt="Cerberus Constructions Logo"></a>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Hero Section -->
+        <header id="home" class="hero">
+            <div class="container">
+                <h1>Building Excellence, Together</h1>
+                <p>Your trusted partner in construction and renovation.</p>
+                <a href="#contact" class="cta-button">Contact Us</a>
+            </div>
+        </header>
+
+        <!-- Services Section -->
+        <section id="services" class="section">
+            <div class="container">
+                <h2>Our Services</h2>
+                <div class="service">
+                    <h3>New Builds</h3>
+                    <p>We design and build homes that inspire and endure.</p>
+                </div>
+                <div class="service">
+                    <h3>Renovations</h3>
+                    <p>Transform your space into something extraordinary.</p>
+                </div>
+                <div class="service">
+                    <h3>Plumbing & Heating</h3>
+                    <p>Expert installation of boilers and plumbing systems.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Portfolio Section -->
+        <section id="portfolio" class="section">
+            <div class="container">
+                <h2>Our Portfolio</h2>
+                <div class="portfolio-grid">
+                    <img src="portfolio1.jpg" alt="Project 1">
+                    <img src="portfolio2.jpg" alt="Project 2">
+                    <img src="portfolio3.jpg" alt="Project 3">
+                    <video controls>
+                        <source src="video1.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <img src="portfolio4.jpg" alt="Project 4">
+                    <video controls>
+                        <source src="video2.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <img src="portfolio5.jpg" alt="Project 5">
+                    <video controls>
+                        <source src="video3.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="section">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <p>Get in touch to discuss your next project!</p>
+                <a href="mailto:cerberusconstructionsltd@gmail.com" class="cta-button">Email Us</a>
+                <a href="https://wa.me/447457405910" class="cta-button whatsapp-button">WhatsApp Us</a>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="container">
+                <p>&copy; 2025 Cerberus Constructions Ltd. All Rights Reserved.</p>
+            </div>
+        </footer>
+    </body>
+    </html>
+    
